--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.card-normaljs {
+  border: solid 1px rgb(108, 108, 108);
+  background: rgb(197, 197, 197);
+  color: #FFF;
+  font-weight: 100;
+  font-size: 20px;
+  text-align: left;
+  padding: 12px;
+  margin: 10px;
+}
